# tmp_exchange

./: 1713107125656.yml  1762943148475.yml  1764232788732.yml  1767577843350.yml  PLAN.md  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  新建 文本文档.txt
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  files.py  ocr.py  tasks.py  ws.py
backend/app/core/: config.py  exceptions.py  logging.py  quota.py  rate_limit.py  security.py
backend/app/crud/: base.py  file.py  ocr_record.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/ml/: base.py  coord_utils.py  ocr_engine.py  vlm_client.py
backend/app/models/: file.py  ocr_record.py  user.py
backend/app/schemas/: file.py  ocr.py  task.py  user.py
backend/app/services/: file_service.py  ocr_service.py  pdf_service.py  task_service.py
backend/app/utils/: image.py  storage.py
backend/app/workers/: arq_worker.py  queues.py
backend/app/workers/tasks/: merge_task.py  ocr_task.py  pdf_split_task.py
backend/scripts/: seed.py
backend/tests/: conftest.py
backend/tests/api/: test_health.py
backend/tests/ml/: test_coord_utils.py  test_vlm_stub.py
frontend/: Dockerfile  next.config.ts  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/tasks/: page.tsx
frontend/src/lib/: api.ts  ws.ts
frontend/src/stores/: auth.ts
frontend/src/types/: index.ts
(+5 files in other folders)
